# fm-core-lib

./: .gitignore  CIRCULAR_IMPORT_FIX.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/fm_core_lib/: __init__.py
src/fm_core_lib/auth/: __init__.py  request_context.py  service_auth.py  token_provider.py
src/fm_core_lib/clients/: __init__.py  base.py  case_service_client.py
src/fm_core_lib/core/: __init__.py
src/fm_core_lib/core/preprocessing/: __init__.py  data_preprocessor.py
src/fm_core_lib/discovery/: __init__.py  service_registry.py
src/fm_core_lib/infrastructure/: __init__.py  redis_setup.py
src/fm_core_lib/infrastructure/llm/: cache.py  local_llm_manager.py  router.py
src/fm_core_lib/infrastructure/llm/providers/: __init__.py  anthropic.py  base.py  fireworks_provider.py  gemini.py  groq_provider.py  huggingface.py  local_provider.py  openai_provider.py  registry.py
src/fm_core_lib/models/: __init__.py  api_models.py  case.py  common.py  evidence.py
src/fm_core_lib/utils/: __init__.py  resilience.py
tests/: __init__.py
